<resources>
    <string name="app_name">GitHub User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_avatar">Avatar</string>
    <string name="username">Username</string>
    <string name="dummy_following">354</string>
    <string name="dummy_followers">354</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="searchbar_hint">Search User</string>
    <string name="detail_user_avatar">Detail User Avatar</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="tab_text_1">Following</string>
    <string name="tab_text_2">Followers</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="user_not_found">User Not Found</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="repos">Repos</string>
    <string name="search_page">Search Page\n</string>
    <string name="find_github_users">Find GitHub Users!</string>
    <string name="favorite_user">Favorite User</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="share">"Share "</string>
</resources>