<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/detail_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            tools:title="Detail" />

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_detail_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/detail_user_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_app_bar_layout"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_detail_name"
        style="@style/TextContent.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_detail_avatar"
        app:layout_constraintStart_toStartOf="@+id/iv_detail_avatar"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_avatar"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/tv_detail_username"
        style="@style/TextContent.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/tv_detail_following_num"
        style="@style/TextContent.TitleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_detail_followers_num"
        app:layout_constraintEnd_toStartOf="@+id/line1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_detail_followers_num"
        tools:text="@string/dummy_following" />

    <TextView
        android:id="@+id/tv_detail_following"
        style="@style/TextContent.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/following"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_following_num"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_following_num"
        app:layout_constraintStart_toStartOf="@id/tv_detail_following_num"/>

    <TextView
        android:id="@+id/tv_detail_followers_num"
        style="@style/TextContent.TitleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_username"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
        tools:text="@string/dummy_followers" />

    <TextView
        android:id="@+id/tv_detail_followers"
        style="@style/TextContent.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/followers"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_followers_num"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_followers_num"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_followers_num" />

    <View
        android:id="@+id/line1"
        android:layout_width="0.5dp"
        android:layout_height="40dp"
        android:background="@color/md_theme_light_tertiary"
        app:layout_constraintTop_toTopOf="@id/tv_detail_followers_num"
        app:layout_constraintBottom_toBottomOf="@id/tv_detail_followers"
        app:layout_constraintEnd_toStartOf="@id/tv_detail_followers"
        app:layout_constraintStart_toEndOf="@id/tv_detail_following"/>

    <View
        android:id="@+id/line2"
        android:layout_width="0.5dp"
        android:layout_height="40dp"
        android:background="@color/md_theme_light_tertiary"
        app:layout_constraintTop_toTopOf="@id/tv_detail_followers_num"
        app:layout_constraintBottom_toBottomOf="@id/tv_detail_followers"
        app:layout_constraintStart_toEndOf="@id/tv_detail_followers"
        app:layout_constraintEnd_toStartOf="@id/tv_detail_repos"/>

    <TextView
        android:id="@+id/tv_detail_repos_num"
        style="@style/TextContent.TitleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_detail_followers_num"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/line2"
        app:layout_constraintTop_toTopOf="@id/tv_detail_followers_num"
        tools:text="@string/dummy_followers" />

    <TextView
        android:id="@+id/tv_detail_repos"
        style="@style/TextContent.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/repos"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_repos_num"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_repos_num"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_repos_num" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <include
        android:id="@+id/tab_layout"
        layout="@layout/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_followers"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        android:src="@drawable/baseline_favorite_border_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/favorite_user" />

</androidx.constraintlayout.widget.ConstraintLayout>